<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TwitterClient</string>

    <!-- Generic messages -->
    <string name="msg_no_connection">No connection available</string>
    <string name="msg_already_logged">Already Logged into twitter</string>
    <string name="msg_login_failed">Login failed</string>
    <string name="msg_favorite_failed">Unable to change favorite</string>
    <string name="msg_retweet_failed">Unable to retweet</string>

    <!-- Login -->
    <string name="button_login">Login with Twitter</string>
    <string name="button_logout">Logout from Twitter</string>

    <!-- Main menu -->
    <string name="action_new_tweet">New Tweet</string>
    <string name="action_account">Account</string>
    <string name="action_settings">Settings</string>
    <string name="action_following">Following</string>
    <string name="action_followers">Followers</string>
    <string name="action_favorites">Favorites</string>
    <string name="action_logout">Logout</string>

    <!-- Titles -->
    <string name="title_timeline">Timeline</string>
    <string name="title_tweet">New Tweet</string>
    <string name="title_tweet_reply">New Tweet Reply</string>
    <string name="title_following">Following</string>
    <string name="title_followers">Followers</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_account">Account</string>
    <string name="title_settings">Settings</string>
    <string name="title_map">Map</string>

    <!-- Timeline -->
    <string name="tweet_action_reply">Reply</string>
    <string name="tweet_action_retweet">Retweet</string>
    <string name="tweet_action_retweeted">Retweeted</string>
    <string name="tweet_action_favorite">Favorite</string>
    <string name="tweet_action_favorited">Unfavorite</string>
    <string name="tweet_action_map">Map</string>
    <string name="tweets_no_tweets">No tweets</string>
    <string name="tweets_reload">Reload</string>
    
    <!-- Account -->
    <string name="account_name">Name</string>
    <string name="account_location">Location</string>
    <string name="account_website">Website</string>
    <string name="account_bio">Bio</string>
    <string name="account_submit">Save</string>
    <string name="account_msg_update_failed">Updating user profile failed</string>
    <string name="account_msg_fetch_failed">Loading user profile failed</string>

    <!-- New Tweet -->
    <string name="tweet_multimedia_title">Add multimedia / location</string>
    <string name="tweet_select_image">Select image</string>
    <string name="tweet_camera">Take a photo</string>
    <string name="tweet_location">Allow adding location</string>
    <string name="tweet_submit">Tweet</string>
    <string name="tweet_thumbnail">No image added</string>
    <string name="tweet_thumbnail_dialog">Attached image</string>
    <string name="tweet_thumbnail_clear">Remove image</string>
    <string name="tweet_hint">Compose new Tweet&#8230;</string>
    <string name="tweet_replying_to">Replying to:</string>
    <string name="tweet_max_char_count">140</string>

    <!-- Users -->
    <string name="user_not_followed">No followers yet</string>
    <string name="user_not_following">Not following anyone yet</string>
    <string name="user_action_follow">Follow</string>
    <string name="user_action_unfollow">Unfollow</string>
    <string name="user_msg_followed">Now following %s</string>
    <string name="user_msg_unfollowed">No longer following %s</string>

</resources>