<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="right"
    android:orientation="vertical"
    android:padding="20dp" >

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:id="@+id/replyingTo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="4dp"
            android:text="@string/tweet_replying_to" />

        <TextView
            android:id="@+id/replyingToText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingRight="4dp"
            android:text="@string/tweet_replying_to"
            android:textColor="#777" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="right"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="15dp" >

            <ImageButton
                android:id="@+id/select_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:contentDescription="@string/tweet_select_image"
                android:paddingRight="20dp"
                android:src="@drawable/select_image" />

            <ImageButton
                android:id="@+id/camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@id/select_image"
                android:contentDescription="@string/tweet_camera"
                android:paddingRight="20dp"
                android:src="@drawable/camera" />

            <TextView
                android:id="@+id/characters_remaining"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:gravity="right"
                android:text="@string/tweet_max_char_count" />
        </RelativeLayout>

        <EditText
            android:id="@+id/tweet"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:hint="@string/tweet_hint"
            android:inputType="textMultiLine"
            android:minLines="3" />

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/tweet_thumbnail"
            android:paddingTop="35dp" />
    </LinearLayout>

</LinearLayout>