<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp" >

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:columnCount="2"
        android:paddingBottom="4dp"
        android:rowCount="1" >

        <ImageView
            android:id="@+id/tweet_portrait"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_marginRight="8dp"
            android:layout_row="0"
            android:src="@drawable/no_portrait" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_column="1"
            android:layout_gravity="fill_horizontal|top"
            android:layout_row="0"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tweet_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tweet_twitterName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#00acee"
                android:textStyle="italic" />
        </LinearLayout>
    </GridLayout>

    <TextView
        android:id="@+id/tweet_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="4dp" />

    <ImageView
        android:id="@+id/tweet_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true" />

    <ProgressBar
        android:id="@+id/tweet_image_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tweet_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="4dp"
        android:paddingTop="4dp"
        android:textColor="@android:color/darker_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal" >
        
        <cz.fit.gja.twitter.view.MapButton
            android:id="@+id/tweet_map"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tweet_action_map"
            android:onClick="showTweetOnMap" />

        <Button
            android:id="@+id/tweet_reply"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tweet_action_reply" />

        <cz.fit.gja.twitter.view.IdButton
            android:id="@+id/tweet_retweet"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
			android:textOn="@string/tweet_action_retweeted"
            android:textOff="@string/tweet_action_retweet"
            android:onClick="doRetweet" />

        <cz.fit.gja.twitter.view.IdButton
            android:id="@+id/tweet_favorite"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOn="@string/tweet_action_favorited"
            android:textOff="@string/tweet_action_favorite"
            android:onClick="makeFavorite" />
    </LinearLayout>

</LinearLayout>